# quick_chat

./: .gitignore  Cargo.toml  LICENSE  README.md  c_build.sh  c_run.sh  git_checkout_.sh  note.txt  qc_api_definition.md  qc_object_definition.md  s_run.sh  sample_code.md  sample_code.txt  sample_code_web_server.md
quick_chat_c/: Cargo.toml  log4rs.yaml
quick_chat_c/src/: bak.main.rs  bak.qc_client.rs  common.rs  main.rs  qc_client.rs
quick_chat_c/src/qc_web/: call_auth.rs  mod.rs
quick_chat_lib/: Cargo.toml
quick_chat_lib/src/: lib.rs
quick_chat_s/: Cargo.toml
quick_chat_s/src/: bak.main.rs  bak.qc_server.rs  common.rs  main.rs  qc_server.rs
quick_chat_s/src/qc_server/: mod.rs  qc_server.rs
quick_chat_s/src/qc_web/: handler_auth.rs  mod.rs  test_url.txt  test_web_server.txt  web_server.rs
