[package]
name = "quick_chat_c"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
qc_lib = { path = "../quick_chat_lib" }
once_cell = "1.17"
clap = { version = "4.0", features = ["derive"] }

# log4rs
log = "0.4"
log4rs = "1.3.0"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
